--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
             padding: 20px;
         }
 
-        #band {
+        #bands {
             list-style-type: none;
             padding: 0;
 			margin : 0 50px;
